--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,7 @@
 
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+    <a href="https://github.com/vjsp/quiz-modulo6">Acceso a GitHub</a>
   </footer>
 </div>
 </body>
